SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Allocation_Used__c.field-meta.xml
<CustomField>
        <fullName>Allocation_Used__c</fullName>
        <description>PS-MC-SB-11 to manage percentage of used allocation for this time interval</description>
        <formula>IF( Allocations_Per_Interval__c &gt; 0, Used_Allocations__c / Allocations_Per_Interval__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Allocation Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>