SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Brand_Allocation__c.field-meta.xml
<CustomField>
        <fullName>Brand_Allocation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PS-MC-SB-11 to manage brand allocation for country</description>
        <label>Brand Allocation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Brand_Allocation__c.Is_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Brand_Allocation__c</referenceTo>
        <relationshipName>Brand_Country_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>