SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Cancelled_Allocations__c.field-meta.xml
<CustomField>
        <fullName>Cancelled_Allocations__c</fullName>
        <description>PS-MC-SB-86 to maintain number of cancelled allocations</description>
        <label>Cancelled Allocations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>