SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PS-MC-SB-11 to manage country for this Brand Allocation</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Brand_Country_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>