SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Is_Active__c.field-meta.xml
<CustomField>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PS-MC-SB-11 It is used to make country active/in-active.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>