SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Is_Record_Copied__c.field-meta.xml
<CustomField>
        <fullName>Is_Record_Copied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PS-MC-SB-193 to manage if record is copied or not</description>
        <label>Is Record Copied</label>
        <type>Checkbox</type>
    </CustomField>