SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/fields/Used_Allocations__c.field-meta.xml
<CustomField>
        <fullName>Used_Allocations__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PS-MC-SB-11 to manage used for this time interval</description>
        <label>Used Allocations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>