SFUSA/force-app/main/default/objects/Brand_Country_Allocation__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Allocation__c</columns>
        <columns>Country__c</columns>
        <columns>Allocations_Per_Interval__c</columns>
        <columns>Used_Allocations__c</columns>
        <columns>Is_Leaf_Node__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>